# Evolve

./: .gitignore  CMakeLists.txt  Doxyfile  GavinSuggestions.md  README.md  strategy.ods
include/: EvolveConfig.h.in  attribute.h  common.h  creature.h  dominance.h  ecosystem.h  evolve.h  gene.h  genetics.h  helpers.h  phenotype.h  species.h  trait.h
src/: attribute.cpp  binarytrait.cpp  continuoustrait.cpp  creature.cpp  discretetrait.cpp  dominance.cpp  ecosystem.cpp  evolve.cpp  gene.cpp  genetics.cpp  main.cpp  phenotype.cpp  species.cpp  trait.cpp  traitweighting.cpp
ui/: EvolveUI.pro  evolveui.ui  labelslider.ui  plot_phenotypes.py  plot_stats.py  requirements.txt  speciesinfo.ui  subscriber.py
ui/include/: evolveui.h  labelslider.h  speciesinfo.h
ui/src/: evolveui.cpp  labelslider.cpp  main.cpp  speciesinfo.cpp
